Changes in 22.9
===============
	* short option l returned in fuser Debian #539087

Changes in 22.8
===============
	* Added Czech PO file
	* rc1 update of Italian, Polish, Indonesian, Swedish and Russian PO files
	* Updated Finnish, Italian and Vietnamese PO files
	* Applied patch from Kari Hautio for lazy umount'ed filesystems SF#2545632
	* Applied patch from Anonymous SF submitter to fix killall -l
	  Fixes SF#2002570
	* fuser will print mounts,nfs exports and swaps with -v Debian #356655
	  and SF#533958
	* pstree and fuser have long options Debian #517412
	* Fixed pstree -a off-by-one error in buffer, Debian #536243
	* Changed configure.ac to not use CXX SF# 2789801

Changes in 22.7
===============
2009-05-04 Craig Small
	* Updated Polish, Russian, Swedish and Indonesian PO files

2009-04-26 Craig Small
	* Changed fuser.1 so signal is SIGNAL to reduce confusion about wether
	  or not it is a parameter Debian #517413
	* fuser.1 references pkill(1) Debian #517414

2009-03-27 Craig Small
	* Added Chinese (traditional) PO file

2009-01-14 Craig Small
	* Updated Russian PO file
	* Clarified -m and -c for fuser Debian #467289

2008-12-16 Craig Small
	* Patch from Arnaud Giersch to fix udp ports in fuser Debian #502208
	* pstree man page mentions -Z may not be available Debian #478327
	* pstree handles UTF-8 lengths much better Debian #413503
	* killall says no process found when process not found Debian #500097
	* pstree makes a bigger buffer for -al flags Debian #352603

2008-12-05 Craig Small
	* Dynamically reallocate buffer for fuser patch from Don Armstrong

2008-11-11 Craig Small
	* Updated Indonesian PO file

2008-08-09 Craig Small
	* peekfd off by one problem in fds Debian #460530

2007-11-19 Craig Small
	* Patch from Marcus Watts for better comm handling in pstree
	* Updated Hungarian po file

2007-11-13 Craig Small
	* Updated French and German po files
	* Fuser -m detects more open sockets SF patch #1728412 Thnks marienz

2007-11-07 Craig Small